--- a/_config.yml
+++ b/_config.yml
@@ -6,8 +6,8 @@ title                    : "Because Developers are Awesome"
 title_separator          : "-"
 name                     : &name "Adrian Hall"
 description              : &description "Musings about cloud and mobile development."
-url                      : &url "https://aryoprakarsa.github.io/dev1apjp1"
-baseurl                  : ""
+url                      : &url "https://aryoprakarsa.github.io"
+baseurl                  : "/dev1apjp1"
 repository               : "dev1apjp1/aryoprakarsa.github.io"
 teaser                   : # path of fallback teaser image, e.g. "/assets/images/500x300.png"
 breadcrumbs              : true
